# agent_image

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
memory-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
memory-service/hooks/: post-commit
memory-service/sql/: 001_schema.sql
memory-service/src/memory/: agent_runner.py  chunking.py  config.py  db.py  discovery.py  embeddings_server.py  enqueue.py  mcp_server.py  models.py  reconcile.py  repository.py  run_worker.py  snapshot.py  startup.py  tasks.py  worker.py
memory-service/src/memory/embeddings/: base.py  factory.py  local.py  remote.py
memory-service/src/memory/parser/: base.py  (+3 more)
memory-service/tests/: conftest.py  test_agent_runner.py  test_chunk_sync.py  test_chunking.py  test_discovery.py  test_embedding_config_provider.py  test_embeddings.py  test_embeddings_server.py  test_enqueue.py  test_js_ts_parser.py  test_mcp_server.py  test_python_parser.py  test_reconcile.py  test_registry.py  test_repository_structure.py  test_reset_db.py  test_resolution.py  test_resolution_multilang.py  test_retrieval.py  test_schema.py  test_snapshot_cli.py  test_snapshot_dump.py  test_snapshot_meta.py  test_snapshot_restore.py  test_startup_flow.py  test_startup_home.py  test_tasks_repository.py  test_worker.py  test_worker_multilang.py
orchestrator/: pyproject.toml  smoke.sh
orchestrator/src/orchestrator/: branch.py  cli.py  loop.py  orchestrate.py  seams.py
orchestrator/tests/: test_branch_git.py  test_branch_name.py  test_cli.py  test_loop.py  test_orchestrate.py  test_seams.py
(+29 files in other folders)
