[project]
name = "memory-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.25",
    "fastembed>=0.4",
    "httpx>=0.27",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "anyio>=4.4", "trio>=0.26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
